{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 7,
  "lineage": "6ba0255d-734e-34a4-bb57-1b4a9c5b5b4a",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "146.148.119.178",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-03-19T03:43:58.594-07:00",
            "id": "projects/cloud-486909/regions/europe-west1/addresses/tp-nginx-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "tp-nginx-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "cloud-486909",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloud-486909/regions/europe-west1/addresses/tp-nginx-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-19T03:44:08.238-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cloud-486909/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/cloud-486909/global/networks/tp-nginx-vpc",
            "priority": 1000,
            "project": "cloud-486909",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloud-486909/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-03-19T03:44:08.302-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cloud-486909/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/cloud-486909/global/networks/tp-nginx-vpc",
            "priority": 1000,
            "project": "cloud-486909",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloud-486909/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260310",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cloud-486909/zones/europe-west1-b/disks/tp-nginx-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/cloud-486909/zones/europe-west1-b/instances/tp-nginx-vm",
            "instance_id": "8827809516219690338",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "ansible:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIDxehdY31HSCOYQqSSXxPseVVLlY37I3KaBg3kPMa3Dz yelizavetasamuilava@cs-190858242760-default\n"
            },
            "metadata_fingerprint": "cSdsxpL6wIg=",
            "name": "tp-nginx-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "146.148.119.178",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cloud-486909/global/networks/tp-nginx-vpc",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cloud-486909/regions/europe-west1/subnetworks/tp-nginx-subnet",
                "subnetwork_project": "cloud-486909"
              }
            ],
            "project": "cloud-486909",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloud-486909/zones/europe-west1-b/instances/tp-nginx-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "google_compute_address.static_ip",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/cloud-486909/global/networks/tp-nginx-vpc",
            "mtu": 0,
            "name": "tp-nginx-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "6073497060023627139",
            "project": "cloud-486909",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloud-486909/global/networks/tp-nginx-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-03-19T03:44:08.374-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/cloud-486909/regions/europe-west1/subnetworks/tp-nginx-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "tp-nginx-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/cloud-486909/global/networks/tp-nginx-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "cloud-486909",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cloud-486909/regions/europe-west1/subnetworks/tp-nginx-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}